# uuid64

./: .gitignore  AUTHORS.md  Cargo.toml  LICENSE-BSD.md  LICENSE-MIT.md  README.md
bindings/php/: README.md  Uuid64.php  uuid64.h
bindings/php/examples/: Usage.php
crates/uuid64-core/: Cargo.toml  README.md
crates/uuid64-core/src/: lib.rs
crates/uuid64-ffi/: Cargo.toml  README.md
crates/uuid64-ffi/src/: lib.rs
