[workspace]
resolver = "3"

members = [
    "crates/uuid64-core",
    "crates/uuid64-ffi",
]

[workspace.package]
authors = ["Michael Cummings <mgcummings@yahoo.com>"]
description = "URL-safe base64-encoded UUIDs for compact, sortable, unique identifiers"
edition = "2024"
license = "BSD-3-Clause OR LGPL-3-or-later"
repository = "https://github.com/Dragonrun1/uuid64"
rust-version = "1.95"

[workspace.dependencies]
uuid = { version = "1.23", features = ["v4", "v7"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
